# Taller-Worms

./: .CMakeLists.txt.un~  .clang-format  .client.h.un~  .game.cpp.un~  .gitignore  .main.cpp.un~  .pre-commit-config.yaml  BtoA.dump  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CPPLINT.cfg  Client.h  LICENCE  Makefile  PorFavorCompila  README.md  client  client.h  cmake_install.cmake  configuration.yaml  game.cpp  game.h  game_world.cpp  game_world.h  installer.sh  listener.cpp  listener.h  main.cpp  main.cpp~  motor.cpp  motor.h  physics_constants.h  run_test.sh  screen.cpp  screen.h  server  ui  ui.cpp  uninstaller.sh
Lobby/: _CMakeLists.txt  connect.cpp  connect.h  connectwindow.ui  createscreen.cpp  createscreen.h  createscreen.ui  joinscreen.cpp  joinscreen.h  joinscreen.ui  main.cpp  main_lobby_window.cpp  main_lobby_window.h  main_lobby_window.ui
aux/: auxiliar_physics_functions.h
build-client_gui-Desktop_Qt_5_15_15_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja
build-client_gui-Desktop_Qt_5_15_15_GCC_64bit-Debug/client_gui_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-client_gui-Desktop_Qt_5_15_15_GCC_64bit-Debug/client_gui_autogen/EWIEGA46WW/: moc_aboutwindow.cpp  moc_chooseoptionwindow.cpp  moc_choosingwindow.cpp  moc_connectionwindow.cpp  moc_createwindow.cpp  moc_joinwindow.cpp
build-client_gui-Desktop_Qt_5_15_15_GCC_64bit-Debug/client_gui_autogen/include/: ui_aboutwindow.h  ui_chooseoptionwindow.h  ui_choosingwindow.h  ui_connectionwindow.h  ui_createwindow.h  ui_joinwindow.h
client_gui/: CMakeLists.txt  aboutwindow.cpp  aboutwindow.ui  chooseoptionwindow.cpp  chooseoptionwindow.h  chooseoptionwindow.ui  choosingwindow.ui  connectionwindow.cpp  connectionwindow.h  connectionwindow.ui  createwindow.cpp  createwindow.h  createwindow.ui  joinwindow.cpp  joinwindow.h  joinwindow.ui  main.cpp  resources.qrc
client_src/: MAIN_VIEJOCPP  client.cpp  client.h  client_error.h  client_lobby.cpp  client_lobby.h  client_main.cpp  info_clientb.h  receiver.cpp  receiver.h  sender.cpp  sender.h
data/imagenes_rotadas/: flipit.py
documentation/: documentacion_tecnica.md  project_manual.md  protocol_manual.md
documentation/client_server/: client.puml  create_new_match.puml  execute_command.puml  protocol.puml  server.puml
documentation/protocol/: diagrama.puml
entities/: Beam.cpp  Entity.h  Rocket.cpp  Rocket.h  Worm.cpp  Worm.h
game_src/: attack.cpp  attack.h  beam.cpp  beam.h  beam_dto.cpp  beam_dto.h  commands.h  constants_game.h  explosives_dto.cpp  explosives_dto.h  game.h  game_dynamic.cpp  game_dynamic.h  game_info.cpp  game_info.h  game_lobby.cpp  game_lobby.h  game_map.cpp  game_map.h  game_status.cpp  game_status.h  jump.cpp  jump.h  move.cpp  move.h  position.cpp  position.h  power_ups_dto.cpp  power_ups_dto.h  projectile_dto.cpp  projectile_dto.h  select_map.cpp  select_map.h  serializable.h  supply_box_dto.cpp  supply_box_dto.h  weapons_dto.cpp  weapons_dto.h  worm.cpp  worm.h  (+2 more)
game_src/commands/: cheats.cpp  cheats.h  command.h  drop_dynamite.cpp  drop_dynamite.h  hit_upclose.cpp  hit_upclose.h  jump.cpp  jump.h  launch_bazooka.cpp  launch_bazooka.h  launch_rocket.cpp  match.cpp  match.h  match_command.cpp  match_command.h  move.cpp  move.h  remote_operated.cpp  remote_operated.h  teleport.cpp  teleport.h  throw_grenade.cpp  throw_grenade.h
game_src/map_loading/: invalid_map_error.h  maps_loader.cpp  maps_loader.h
maps/: dust2.txt  map_names.yaml  medium.txt  small.txt  subsuelo.txt  test.txt
physics_src/: Beam.cpp  Beam.h  Entity.h  Rocket.cpp  Rocket.h  Worm.cpp  Worm.h  auxiliar_physics_functions.cpp  auxiliar_physics_functions.h  beam.cpp  collision_handler.cpp  collision_handler.h  entity.h  explosion_handler.h  game_world.cpp  game_world.h  listener.cpp  listener.h  main.cpp  melee_handler.cpp  melee_handler.h  physics_constants.h  rocket.h  teleport_handler.cpp  teleport_handler.h  water.cpp  water.h  worm.cpp  worm.h
physics_src/aux/: auxiliar_functions.cpp  auxiliar_functions.h
physics_src/entities/: beam.cpp  beam.h  entity.cpp  entity.h  rocket.cpp  rocket.h  water.cpp  water.h  worm.cpp  worm.h
physics_src/entities/projectiles/: air_attack_missile.cpp  air_attack_missile.h  banana.cpp  banana.h  bazooka.cpp  bazooka.h  delayed_projectile.cpp  delayed_projectile.h  dynamite.cpp  dynamite.h  green_grenade.cpp  green_grenade.h  holy_grenade.cpp  holy_grenade.h  instant_projectile.cpp  instant_projectile.h  mortar.cpp  mortar.h  projectile.cpp  projectile.h  projectile_fragment.cpp  projectile_fragment.h  red_grenade.cpp  red_grenade.h
physics_src/entities/supplies/: provition_supply_box.cpp  provition_supply_box.h  supply_box.cpp  supply_box.h  trap_supply_box.cpp  trap_supply_box.h
physics_src/query_handlers/: explosion_handler.cpp  explosion_handler.h  melee_handler.cpp  melee_handler.h  supply_box_position_handler.cpp  supply_box_position_handler.h  teleport_handler.cpp  teleport_handler.h
resources/images/: .extraer_color_pixel.py.un~  extraer_color_pixel.py  extraer_color_pixel.py~
server_src/: connecting_user.cpp  connecting_user.h  constants_server.h  game_loop.cpp  game_loop.h  lobby.cpp  lobby.h  main.cpp  match.cpp  match.h  match_starter.cpp  match_starter.h  match_struct.h  matches_monitor.cpp  matches_monitor.h  player.cpp  player.h  receiver.cpp  receiver.h  sender.cpp  sender.h  server_receiver.cpp  server_receiver.h  server_sender.cpp  server_sender.h  status_broadcaster.cpp  status_broadcaster.h  team.cpp  team.h
shared_src/: config_loader.cpp  config_loader.h  const.cpp  constants.h  info_struct.h  protocol.cpp  protocol.h  resolve_name.cpp  resolver.cpp  socket.cpp  thread.h
tests/: test_1.cpp  test_commands.cpp  test_game_dynamic.cpp  test_game_map.cpp
ui_src/: beam_view.cpp  beam_view.h  constants.cpp  constants.h  game_view.cpp  game_view.h  mouse_handler.cpp  mouse_handler.h  projectile_view.cpp  projectile_view.h  rocket_view.cpp  rocket_view.h  supply_box_view.cpp  supply_box_view.h  worm_view.cpp  worm_view.h
(+14 files in other folders)
